bevy_asset_loader/tests/ui/unknown_attribute_type.stderr
error: Unknown attribute type
 --> $DIR/unknown_attribute_type.rs:8:13
  |
8 |     #[asset(what_is_this)]
  |             ^^^^^^^^^^^^
