bevy_asset_loader/tests/ui/unknown_attribute_type.rs
use bevy_asset_loader::*;
use bevy::prelude::*;

fn main() {}

#[derive(AssetCollection)]
struct Test {
    #[asset(what_is_this)]
    #[asset(path = "test.ogg")]
    test: Handle<AudioSource>,
}
